move checkmark, fix janky hover effects on mobile

--- a/client/src/styles/ProblemItem.module.scss
+++ b/client/src/styles/ProblemItem.module.scss
@@ -18,6 +18,9 @@
   color: var(--theme-color);
   font-weight: 500;
   font-size: 17.5px;
+  svg {
+    margin-left: 3px;
+  }
 }
 .right {
   display: flex;
